Modify index file

--- a/uch.css
+++ b/uch.css
@@ -29,12 +29,10 @@ header {
     padding: 0.5rem 2rem;
 }
 
-.play-store {
+.play-store1 {
     width: 48%;
     display: inline;
-    height: 60px;
 }
-
 
 .main .card {
     display: flex;
