--- a/uch.css
+++ b/uch.css
@@ -2,7 +2,7 @@ body {
     background: url('./nbg.jpg');
     background-position: center;
     background-size: cover;
-    background: repeat no-repeat;
+    background: no-repeat;
     color: #fff;
 }
 
