--- a/uch.css
+++ b/uch.css
@@ -59,7 +59,7 @@ header {
     text-decoration: none;
     background-color: red;
     padding: 10px 20px;
-    border-radius: 3%;
+    border-radius: 30px;
 }
 
 @media only screen and (min-width: 768px) {
@@ -102,7 +102,8 @@ header {
         text-decoration: none;
         background-color: red;
         padding: 10px 40px;
-        border-radius: 3%;
+        border-radius: 30px;
+        box-shadow: 0 0.5px 0 2px rgba(121, 118, 118, 0.5);
     }
 
     .space {
@@ -137,5 +138,7 @@ header {
         -o-transition: ease-in;
         transition-delay: 5ms;
     }
+
+
 
 }
